--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -16,7 +16,8 @@
             background: #f2f4f7;
         }
 
-body:after{
+    body:after
+    {
         content: "beta";
         position: fixed;
         width: 80px;
@@ -34,9 +35,8 @@ body:after{
         transform:rotate(-45deg);
 }
 
-
-
-    label {
+    label
+    {
        display: inline-block;
        width: 180px;
        margin: 15px;
@@ -67,7 +67,6 @@ body:after{
     }
 
      form {
-
             flex-direction: column;
             background: #fff;
             padding: 2rem;
@@ -78,13 +77,14 @@ body:after{
             margin-top:120px;
             margin-left:468px;
         }
-        form h1{
-        margin-bottom:20px;
-        margin-left:110px;
-        color: #416ea3;
-        font-size:45px;
-        font-weight:bold;
-        }
+    form h1
+    {
+    margin-bottom:20px;
+    margin-left:110px;
+    color: #416ea3;
+    font-size:45px;
+    font-weight:bold;
+    }
 
      form input {
             outline: none;
@@ -95,10 +95,10 @@ body:after{
             border-radius:10px ;
 
         }
-        label{
-        margin-left:70px;
-        font-size:20px;
-        }
+    label{
+    margin-left:70px;
+    font-size:20px;
+    }
 
      form input:focus {
             border: 2px solid #1877f2;
