--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Grootan Parking Lot | Login</title>
-<!--    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">-->
-    <style type="text/css">
+    <link rel="shortcut icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
         * {
             margin: 0;
             padding: 0;
@@ -89,7 +89,7 @@
         form .login {
             outline: none;
             border: none;
-            background: rgba(31, 107, 220, 0.83);
+            background: #416ea3;
             padding: 0.7rem 1rem;
             border-radius: 0.4rem;
             font-size: 1.1rem;
@@ -97,7 +97,7 @@
         }
 
         form .login:hover {
-            background: #416ea3;
+            background: rgba(31, 107, 220, 0.83);
             cursor: pointer;
         }
 
@@ -118,7 +118,7 @@
         {
             outline: none;
             border: none;
-            background: rgba(31, 107, 220, 0.83);
+            background: #416ea3;
             padding: 0.5rem 1rem;
             border-radius: 0.4rem;
             font-size: 1.1rem;
@@ -127,7 +127,7 @@
         }
 
         form .create-account:hover {
-            background: #416ea3;
+            background: rgba(31, 107, 220, 0.83);
             cursor: pointer;
         }
 
@@ -410,7 +410,6 @@
         box-shadow:0 0 0 1px #892924;
         position:absolute;
         left:48px;
-
         }
         .car-gate:before {
         content:'';
@@ -769,8 +768,6 @@
         }
 
     /* Styles for car ends */
-
-
         .user_icon
         {
             width: 1.5rem;
@@ -834,13 +831,13 @@
                 <label for ="username"></label>
                 <img class="user_icon" src="https://img.icons8.com/external-those-icons-lineal-those-icons/24/undefined/external-user-maps-locations-those-icons-lineal-those-icons.png"/>
                 <input type="text" class = "form-control" id ="username" name = "username"
-                       placeholder="Username or Email " autofocus="autofocus">
+                       placeholder="Username or Email" required autofocus="autofocus">
             </div>
             </br>
             <div class="form-group" style="position: relative">
                 <label for="password"></label>
                 <span class="pass_icon"><img src="https://img.icons8.com/ios/24/undefined/password--v1.png"/> </span>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password" />
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required/>
                 <span class="pass_eye"><img src="https://img.icons8.com/material-outlined/24/undefined/visible--v1.png" id="togglePassword" onclick="toggle()"/></span>
             </div>
             </br>
