--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -84,28 +84,8 @@
             <div class="car-shadow"></div>
         </div>
     </div>
-    <div class="street-stripe"></div>
-    <div class="hill">
     </div>
 </div>
-
-<script>
-    let state = false;
-    function toggle()
-    {
-        if(state)
-        {
-          document.getElementById("password").setAttribute("type","password");
-          document.getElementById("togglePassword").style.color="black";
-            state= false;
-        }
-        else
-        {
-            document.getElementById("password").setAttribute("type","text");
-            document.getElementById("togglePassword").style.color="white";
-            state= true;
-        }
-    }
-</script>
+<script src="/js/toggle_password.js"></script>
 </body>
 </html>
