--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@ transform:rotate(-45deg);
 .header {
   overflow: hidden;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-  padding: 20px 10px;
+  padding: 15px 10px;
   background: #fff;
 }
 .header a {
@@ -50,6 +50,8 @@ transform:rotate(-45deg);
   font-size: 35px;
   font-weight: bold;
   color:#416ea3;
+  margin-top:6px;
+  margin-left:20px;
 }
 .header .header-right a:hover {
   background-color: #a9d6f5;
@@ -132,6 +134,24 @@ transform:rotate(-45deg);
             background: #dc931f;
             cursor: pointer;
         }
+        .username{
+
+                      list-style: none;
+
+                      float: right;
+                      text-align: center;
+                      padding: 12px;
+                      text-decoration: none;
+                      font-size: 18px;
+                      color:#416ea3;
+                      line-height: 25px;
+                      border-radius: 4px;
+                      margin-top:0px;
+                      display: inline-block;
+
+
+        }
+
     </style>
 </head>
 <body>
@@ -140,6 +160,9 @@ transform:rotate(-45deg);
     <div class="header-right">
         <a class="active" href="#home">Home</a>
         <a sec:authorize="isAuthenticated()" th:href="@{/login}">logout</a>
+        <ul class="username" th:each="user:${user}">
+            <li th:text="${user.userName}">user</li>
+       </ul>
     </div>
 </div>
 <div align="center" class="content">
