--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -843,7 +843,7 @@
             </br>
             <button type="submit" class="login">Login</button>
             <a href="#">Forgot Password ?</a><br/>
-            <a class="create-account" href="/registration">Create new account</a>
+            <a class="create-account" th:href="@{/registration}">Create new account</a>
         </form>
     </div>
 </div>
