--- a/src/main/resources/templates/customer_details.html
+++ b/src/main/resources/templates/customer_details.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/index.css">
     <style type="text/css">
      * {
             margin: 0;
@@ -80,6 +81,7 @@
      form input:focus {
             border: 2px solid #1877f2;
         }
+
      form .login {
             outline: none;
             border: none;
@@ -114,6 +116,16 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <a  class="logo"> <ul class="username"  th:each="user:${user}">
+            <li class="welcome" >welcome,</li><li id="username" th:text="${user.userName}">user</li></ul></a>
+        <div class="header-right">
+            <a class="active" th:href="@{/}">Home</a>
+            <a class="active" th:href="@{/}">Ticket</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/login}">logout</a>
+    
+        </div>
+    </div>
 <div  class="content">
 
         <form  th:action="@{/customer/details}" method="post" th:object="${customerDetails}" class="form" >
