--- a/src/main/resources/templates/get_slot.html
+++ b/src/main/resources/templates/get_slot.html
@@ -3,49 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/table.css">
     <style type="text/css">
-    *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-     }
-    body{
-    justify-content: center;
-    min-height:100vh ;
-    }
-    ul {
-        margin-top:50px;
-        width:50x;
-    }
-    label {
 
-        width: 200px;
-        margin: 5px;
-        text-align: left;
-    }
-    ul li {
-    display: inline-block;
-    list-style: none;
-    width: 85px;
-    height:40px ;
-    z-index: 1;
-}
 
 </style>
 </head>
 <body>
 <div align="center">
     <h1>AVAILABLE SLOT</h1>
-    <ul class="availableList" th:each="result : ${result}">
-        <lable>Name:</lable>
-        <li th:text="${result.name}"/>
-        <lable>Address:</lable>
-        <li th:text="${result.address}"/>
-        <lable>City:</lable>
-        <li th:text="${result.city}"/>
-        <lable>Available:</lable>
-        <li th:text="${result.isEmpty}"/>
-    </ul>
+    <table class="styled-table" border="">
+        <thead>
+        <tr>
+            <th scope="col">NAME</th>
+            <th scope="col" class="change">Address</th>
+            <th scope="col" class="change">City</th>
+            <th scope="col" class="change">Available</th>
+            <th scope="col" class="change">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="result:${result}" class="pages">
+            <td th:text="${result.name}" class="row"></td>
+            <td th:text="${result.address}" class="row"></td>
+            <td th:text="${result.city}" class="row"></td>
+            <td th:text="${result.isEmpty}" class="row"></td>
+            <td><form action="#" th:action="@{/customer/details}" method="get" th:object="${customerDetails}">
+                <button type="submit" class="park">Park</button></td>
+           
+        </tr>
+        </tbody>
+    </table>
     <form action="#" th:action="@{/}" method="get"  >
         <button type="submit">back</button></form>
 </div>
