--- a/src/main/resources/static/css/_modals.css
+++ b/src/main/resources/static/css/_modals.css
@@ -23,19 +23,20 @@ width: 200px;
 button {
 padding: 5px;
 margin-top: 30px;
+display: inline-block;
+position:absolute;
+
 }
 button {
+
 border:0;
 background:#416ea3;
-display:block;
-width:300px;
+display:inline;
+width: 180px;
 text-align:center;
 border-radius:24px;
 padding:14px 30px;
 cursor:pointer;
-
-
-
 }
 
 form {
@@ -52,8 +53,9 @@ form {
 }
 
 form h1{
-margin-bottom:20px;
-color: #416ea3;
+    margin-left:70px ;
+    margin-bottom:20px;
+    color: #416ea3;
 }
 
 form input {
@@ -79,7 +81,7 @@ form .login {
     padding: 0.8rem 1rem;
     border-radius: 0.4rem;
     font-size: 0.9rem;
-    margin-left:120px;
+    margin-left:70px;
     color: #fff;
 }
 form .login:hover {
@@ -99,7 +101,25 @@ form .login:hover {
     }
     form .login {
         font-size: 1.5rem;
+        
     }
 
+}
+.close{
+    border:0;
+    background:#416ea3;
+    display:block;
+    width: 180px;
+    text-align:center;
+    border-radius: 0.4rem;
+    padding:14px 30px;
+    cursor:pointer;
+    outline: none;
+    border: none;
+    padding: 0.8rem 1rem;
+    border-radius: 0.4rem;
+    font-size: 0.9rem;
+    margin-left:280px;
+    color: #fff;
 }
 
