ticket is not ready yet

--- a/src/main/resources/templates/get_slot.html
+++ b/src/main/resources/templates/get_slot.html
@@ -33,7 +33,7 @@
             <td th:text="${result.city}" class="row"></td>
             <td th:text="${result.isEmpty}" class="row"></td>
             <td><form action="#" th:action="@{/customer/details}" method="get" th:object="${customerDetails}">
-                <button type="submit" class="park">Park</button></td>
+                <button type="submit" class="park">Park</button></form></td>
            
         </tr>
         </tbody>
