--- a/src/main/resources/static/css/modals.css
+++ b/src/main/resources/static/css/modals.css
@@ -1,10 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-     <link rel="stylesheet" href="/src/main/resources/static/css/modals.css"/>
-     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
-    <style>
- .reglable {
+.reglable {
     display: inline-block;
     width: 180px;
     margin: 15px;
@@ -17,20 +11,20 @@
     width: 200px;
  }
 
-  .modal-body{
+  .regform {
+
              flex-direction: column;
              background: #fff;
+             padding: 2rem;
              width: 595px;
-
-  }.modal-content {
-
-             flex-direction: column;
+             height: 540px;
              border-radius: 0.5rem;
              box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-
+             margin-top:120px;
+             margin-left:468px;
   }
 
-      .h1-header{
+      .h1-head{
          margin-left:70px ;
          margin-bottom:20px;
          color: #416ea3;
@@ -53,7 +47,7 @@
          border: 2px solid #1877f2;
      }
 
-   .login {
+  .regform .login {
    
          border:0;
          background:#416ea3;
@@ -69,9 +63,10 @@
          border-radius: 0.4rem;
          font-size: 0.9rem;
          margin-left:70px;
+         margin-top: -40px;
          color: #fff;
      }
-   .login:hover {
+  .regform .login:hover {
          background: #dc931f;
          cursor: pointer;
      }
@@ -109,42 +104,3 @@
          margin-left:280px;
          color: #fff;
      }
-
-    </style>
-</head>
-<body>
-<!-- Modal -->
-<div th:fragment="modal(id)" class="modal fade" th:id="${id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <form  th:action="@{/customer/details}" method="post"  class="regform" th:object="${customerDetails}" >
-                    <h1  class="modalheader">REGISTER FOR PARKING</h1>
-                    </a><br>
-
-                    <label class="reglable">Vehicle :</label>
-                    <input type="text" class="reginput" th:field="*{vehicleNumber}"/><br/>
-
-                    <label class="reglable">VehicleType :</label>
-                    <input type="text" class="reginput" th:field="*{vehicleType}"/><br/>
-
-                    <label class="reglable">Mail :</label>
-                    <input type="text" class="reginput" th:field="*{mail}"/><br/>
-
-                    <label class="reglable">Phonenumber :</label>
-                    <input type="text"  class="reginput" th:field="*{phoneNumber}"/><br/>
-
-                    <label class="reglable">Whatsappnumber :</label>
-                    <input type="text" class="reginput" th:field="*{whatsappNumber}"/><br/><br>
-
-                    <button  class="closing" data-dismiss="modal" ><span>Cancel</span></button>
-                        <button type="submit" class="login">Submit</button>
-                </form>
-
-            </div>
-        </div>
-    </div>
-</div>
-</body>
-</html>
