--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -28,15 +28,16 @@
 
 .styled-tablebox {
     border-collapse: collapse;
-    border-style: groove;
     margin: 100px 100px;
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-family: sans-serif;
     min-width: 1200px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
+    text-transform: capitalize;
+    font-style: italic;
 }
 .styled-tablebox .tableboxhead .changebox {
-    background-color: #0cb4f7;
+    background-color: #416ea3;
     color: #ffffff;
     text-align: left;
 
@@ -64,3 +65,11 @@
     min-width:140px;
 
 }
+ .btn-primary:hover{
+        background: rgba(31, 107, 220, 0.83);
+        cursor: pointer;
+     }
+
+     .btn-primary{
+        background: rgba(255, 255, 255, 0.83);
+     }    
