--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,141 @@
 
     <link rel="stylesheet" href="/css/table.css">
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/_modals.css">
+    <style>
+
+ .reglable {
+    display: inline-block;
+    width: 180px;
+    margin: 15px;
+    text-align: left;
+    color: #416ea3;
+    font-weight: bolder;
+ }
+ input[type=text], select {
+    display: inline-block;
+    width: 200px;
+ }
+
+  .modal-body{
+             flex-direction: column;
+             background: #fff;
+             width: 595px;
+            
+  }.modal-content {
+
+             flex-direction: column;
+             border-radius: 0.5rem;
+             box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+            
+  }
+
+      .modalheader{
+         margin-top:15px;
+         margin-left:40px ;
+         margin-bottom:20px;
+         font-family: "Poppins", sans-serif;
+         font-size:2.5rem;
+         text-decoration: none;
+         color: #416ea3;
+
+     }
+
+  .reginput {
+         outline: none;
+         font-size: 0.9rem;
+         padding: 0.8rem 1rem;
+         margin-bottom:15px;
+         border: 2px solid #2a2a2b31;
+         border-radius:10px ;
+
+     }
+     .reglable{
+     margin-left:70px;
+     }
+
+  .reginput:focus {
+         border: 2px solid #1877f2;
+     }
+
+   .login {
+   
+         border:0;
+         background:#416ea3;
+         display:block;
+         width: 180px;
+         text-align:center;
+         border-radius: 0.4rem;
+         padding:14px 30px;
+         cursor:pointer;
+         outline: none;
+         border: none;
+         padding: 0.8rem 1rem;
+         border-radius: 0.4rem;
+         font-size: 0.9rem;
+         margin-left:70px;
+         margin-top:-48px;
+         color: #fff;
+     }
+   .login:hover {
+         background: rgba(31, 107, 220, 0.83);
+         cursor: pointer;
+     }
+
+  @media (max-width: 500px) {
+         .regform {
+             width: 300px;
+             height: fit-content;
+         }
+
+         .regform input {
+             margin-bottom: 1rem;
+             font-size: 1.5rem;
+         }
+         .regform .login {
+             font-size: 1.5rem;
+             
+         }
+
+     }
+     button.closing:hover{
+        background: rgba(31, 107, 220, 0.83);
+        cursor: pointer;
+
+     }
+     button.closing{
+         display:block;
+         outline: none;
+         border: none;
+         background:#416ea3;
+         display:block;
+         width: 180px;
+         text-align:center;
+         border-radius: 0.4rem;
+         padding: 0.9rem 1rem;
+         border-radius: 0.4rem;
+         font-size: 0.9rem;
+         margin-left:280px;
+         color: #fff;
+     }
+     .btn-primary{
+     background: rgba(255, 255, 255, 0.83);
+     border-color: #ffffff;
+     }
+    .btn{
+    padding: 0.375rem 1.75rem;
+    }
+    .btn-primary:hover{
+        background: rgba(31, 107, 220, 0.83);
+        cursor: pointer;
+     }
+     .btn:hover{
+        background: rgba(31, 107, 220, 0.83);
+        cursor: pointer;
+    }
+
+
+    
+    </style>
 </head>
 <body class="indexbody">
 <div class="headerindex">
@@ -25,7 +159,7 @@
     <h1></h1>
     <table class="styled-tablebox" >
         <thead class="tableboxhead">
-        <tr >
+        <tr>
             <th scope="col" class="changebox">NAME</th>
             <th scope="col" class="changebox">Address</th>
             <th scope="col" class="changebox">City</th>
@@ -39,16 +173,19 @@
             <td th:text="${result.address}" class="indexrow"></td>
             <td th:text="${result.city}" class="indexrow"></td>
             <td th:text="${result.isEmpty}" class="indexrow"></td>
-            <td><a type="button"  data-toggle="modal" data-target="#exampleModal">Park</a>
+            <td><button type="submit"  class="btn btn-primary"  data-toggle="modal" data-target="#exampleModal" style="background-color: #416ea3;">Park</button>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
-<th:block th:replace="_modals :: modal('exampleModal')">modal</th:block>
+<th:block th:action="@{/customer/details}" method="get" th:replace="_modals :: modal('exampleModal')">modal</th:block>
 </div>
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script>
+
+</script>
 </body>
 </html>
