--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
     <title>Title</title>
    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 
-    <link rel="stylesheet" href="/css/table.css">
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/assets/css/table.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
 </head>
 <body class="indexbody">
 <div class="headerindex">
