--- a/src/main/resources/templates/_modals.html
+++ b/src/main/resources/templates/_modals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<link rel="stylesheet" href="/css/_modals.css">
+<link rel="stylesheet" href="/assets/css/_modals.css">
 </head>
 <body>
 <!-- Modal -->
