--- a/src/main/resources/templates/getTicket.html
+++ b/src/main/resources/templates/getTicket.html
@@ -7,8 +7,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
-          <link rel="stylesheet" href="/css/getTicket.css">
-         <link rel="stylesheet" href="/css/header.css">
+          <link rel="stylesheet" href="/assets/css/getTicket.css">
+         <link rel="stylesheet" href="/assets/css/header.css">
          <style type="text/css"></style>
 </head>
 <body>
