--- a/src/main/resources/templates/_modals.html
+++ b/src/main/resources/templates/_modals.html
@@ -1,116 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-     <link rel="stylesheet" href="/src/main/resources/static/css/modals.css"/>
-     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
-    <style>
- .reglable {
-    display: inline-block;
-    width: 180px;
-    margin: 15px;
-    text-align: left;
-    color: #416ea3;
-    font-weight: bolder;
- }
- input[type=text], select {
-    display: inline-block;
-    width: 200px;
- }
-
-  .modal-body{
-             flex-direction: column;
-             background: #fff;
-             width: 595px;
-
-  }.modal-content {
-
-             flex-direction: column;
-             border-radius: 0.5rem;
-             box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-
-  }
-
-      .h1-header{
-         margin-left:70px ;
-         margin-bottom:20px;
-         color: #416ea3;
-     }
-
-  .reginput {
-         outline: none;
-         font-size: 0.9rem;
-         padding: 0.8rem 1rem;
-         margin-bottom:15px;
-         border: 2px solid #2a2a2b31;
-         border-radius:10px ;
-
-     }
-     .reglable{
-     margin-left:70px;
-     }
-
-  .reginput:focus {
-         border: 2px solid #1877f2;
-     }
-
-   .login {
-   
-         border:0;
-         background:#416ea3;
-         display:block;
-         width: 180px;
-         text-align:center;
-         border-radius: 0.4rem;
-         padding:14px 30px;
-         cursor:pointer;
-         outline: none;
-         border: none;
-         padding: 0.8rem 1rem;
-         border-radius: 0.4rem;
-         font-size: 0.9rem;
-         margin-left:70px;
-         color: #fff;
-     }
-   .login:hover {
-         background: #dc931f;
-         cursor: pointer;
-     }
-
-  @media (max-width: 500px) {
-         .regform {
-             width: 300px;
-             height: fit-content;
-         }
-
-         .regform input {
-             margin-bottom: 1rem;
-             font-size: 1.5rem;
-         }
-         .regform .login {
-             font-size: 1.5rem;
-             
-         }
-
-     }
-     .close{
-         border:0;
-         background:#416ea3;
-         display:block;
-         width: 180px;
-         text-align:center;
-         border-radius: 0.4rem;
-         padding:14px 30px;
-         cursor:pointer;
-         outline: none;
-         border: none;
-         padding: 0.8rem 1rem;
-         border-radius: 0.4rem;
-         font-size: 0.9rem;
-         margin-left:280px;
-         color: #fff;
-     }
-
-    </style>
+    <title>Grootan Parking Lot</title>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+    <link rel="stylesheet" href="/assets/css/modals.css"/>
+    <link rel="stylesheet" href="/assets/css/modals2.css"/>
+    <link rel="shortcut icon" href="/assets/images/favicon.ico"/>
 </head>
 <body>
 <!-- Modal -->
