--- a/src/main/resources/static/assets/css/modals2.css
+++ b/src/main/resources/static/assets/css/modals2.css
@@ -1,6 +1,3 @@
-
-
-
 .reglable {
     display: inline-block;
     width: 180px;
@@ -27,15 +24,10 @@ input[type=text], select {
 
  }
 
-.modalheader{
-    margin-top:15px;
-    margin-left:40px ;
+.h1-header{
+    margin-left:70px ;
     margin-bottom:20px;
-    font-family: "Poppins", sans-serif;
-    font-size:2.5rem;
-    text-decoration: none;
     color: #416ea3;
-
 }
 
 .reginput {
@@ -71,11 +63,10 @@ input[type=text], select {
     border-radius: 0.4rem;
     font-size: 0.9rem;
     margin-left:70px;
-    margin-top:-48px;
     color: #fff;
 }
 .login:hover {
-    background: rgba(31, 107, 220, 0.83);
+    background: #dc931f;
     cursor: pointer;
 }
 
@@ -95,41 +86,20 @@ input[type=text], select {
     }
 
 }
-button.closing:hover{
-    background: rgba(31, 107, 220, 0.83);
-    cursor: pointer;
-
-}
-button.closing{
-    display:block;
-    outline: none;
-    border: none;
+.close{
+    border:0;
     background:#416ea3;
     display:block;
     width: 180px;
     text-align:center;
     border-radius: 0.4rem;
-    padding: 0.9rem 1rem;
+    padding:14px 30px;
+    cursor:pointer;
+    outline: none;
+    border: none;
+    padding: 0.8rem 1rem;
     border-radius: 0.4rem;
     font-size: 0.9rem;
     margin-left:280px;
     color: #fff;
 }
-.btn-primary{
-    background: rgba(255, 255, 255, 0.83);
-    border-color: #ffffff;
-}
-.btn{
-    padding: 0.375rem 1.75rem;
-}
-.btn-primary:hover{
-    background: rgba(31, 107, 220, 0.83);
-    cursor: pointer;
-}
-.btn:hover{
-    background: rgba(31, 107, 220, 0.83);
-    cursor: pointer;
-}
-
-
-/* File */
