--- a/src/main/resources/templates/getTicket.html
+++ b/src/main/resources/templates/getTicket.html
@@ -3,11 +3,11 @@
       xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/getTicket.css">
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/assets/css/getTicket.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <style></style>
+    <link rel="shortcut icon" href="/assets/images/favicon.ico"/>
     </head>
 </head>
 <body>
