--- a/src/main/resources/templates/get_slot.html
+++ b/src/main/resources/templates/get_slot.html
@@ -7,11 +7,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/table.css">
-    <style type="text/css">
-
-
-</style>
+    <link rel="stylesheet" href="/assets/css/table.css">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico"/>
 </head>
 <body>
 <div align="center">
