--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -77,7 +77,7 @@
 <div th:if="${param.error}">
     <div class="incorrect-alert">
         <span class="close-button" onclick="this.parentElement.style.display='none';">&times;</span>
-        Email already exists
+        User exists with same E-mail
     </div>
 </div>
 </body>
