--- a/src/main/resources/templates/Ticket.html
+++ b/src/main/resources/templates/Ticket.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        var qrcode = new QRCode("qrcode");
-    function makeCode () {		
-        var elText ="hello";
-        qrcode.makeCode(elText);
-    }
-    makeCode();
+       var qrcode=undefined;
+       function generationQRCode(value)
+       {
+       if(qrcode === undefined)
+       {
+       qrcode = new QRCode("hi");
+       }
+       else{
+       qrcode.clear();
+       qrcode.makeCode(value);
+       }
+       }
     </script>  
     <style>
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
@@ -20,14 +27,14 @@ float:left;
 width:300px;  
 }
 body {
-  background:url('https://unsplash.it/800/1200/?random');
+  background:url('/Users/grootan/Documents/Grootan-Parking/src/main/resources/templates/index.html');
   background-size:cover;
   background-color: gray;
 }
 .contenido {
   margin: 30px auto;
-  max-height: 430px;
-  max-width: 245px;
+  max-height: 530px;
+  max-width: 345px;
   overflow: hidden;
   box-shadow: 0 0 10px rgb(202, 202, 204);
   background-color:wheat;
@@ -39,7 +46,7 @@ body {
   border-top: 1px dashed #c3c3c3;
 }
 .tinfo {
-  font-size: 0.5em;
+  font-size: 0.8em;
   font-weight: 300;
   color: #c3c3c3;
   font-family: 'Roboto', sans-serif;
@@ -52,13 +59,15 @@ body {
   font-size: 0.7em;
   font-weight: 400;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.8px;
   margin:7px 0;
+  
 }
 
 .name {
-  font-size: 1.3em;
+  font-size: 1.0em;
   font-weight: 300;
+  text-transform: capitalize;
 }
 
 .link {
@@ -81,8 +90,10 @@ a {
   margin: 0px auto;
 }
   .left-one{
+    
   background-repeat: no-repeat;
   background-image: radial-gradient(circle at 0 96% , rgba(0,0,0,0) .2em, gray .3em, white .1em);
+  
 }
   .right-one{
   background-repeat: no-repeat;
@@ -91,7 +102,7 @@ a {
 .column
 {
     display: table-cell;
-    padding: 37px 0px;
+    /* padding: 37px 0px; */
 }
 .center{
   background:white;
@@ -106,27 +117,33 @@ a {
   display:block;
 }
 .left,.right{
-  width:49%;
-  display:inline-table;
+  /* width:49%;
+  display:inline-table; */
 }
 
 .nesp{
   letter-spacing: 0px;
 }
+.gpl{
+  position: absolute;
+    margin-top: 20px;
+    justify-items: center;
+    justify-self: center;
+    text-align: justify;
+    margin-left: 20px;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: x-large;
+}
     </style>
 </head>
 <body>
-    <div class="contenido" style="height: 460px;">
+    <div class="contenido" style="height: 400px;">
         <div class="ticket">
           <div class="hqr">
-            <div class="column left-one"style="height: 60px;"></div>
-            <div class="column center"style="height: 60px;">
-              <div id="qrcode" class="qrcode"></div>
-            </div>
-            <div class="column right-one"style="height: 60px;"></div>
+            <div class="column left-one"style="height: 60px;"><span class="gpl">Grootan-Parking-Lot</span></div>
           </div>
-          </div>
-          <div class="details" style="height: 460px;">
+          <div class="details" style="height: 400px;" name="qrcode">
             <form action="#" th:action="@{/getLotDetails}" method="post" th:object="${parkingSlotReservation}" >
             <div class="tinfo" >
               NAME:
@@ -143,15 +160,15 @@ a {
             <div class="tinfo">
               IN-TIME
             </div>
-            <div class="tdata"><span th:text="${parkingSlotReservation.inTime}"></span>
+            <div class="tdata"><span th:text="${parkingSlotReservation.entryTime}"></span>
               
             </div>  
             <div class="masinfo">
               <div class="left">
                <div class="tinfo">
-              DATE:
+              PRICE:
             </div>
-            <div class="tdata nesp"><span th:text="${parkingSlotReservation.bookingDate}"></span>
+            <div class="tdata nesp"><span th:text="${parkingSlotReservation.price}"></span>
               
             </div>  
               </div>
@@ -163,16 +180,15 @@ a {
               
             </div> 
               </div>
-            </div>
+            </div><br>
             
             <div class="link">
-              <a href="#">SEE MORE</a>
+              <a th:href="@{/}">BACK</a>
             </div>
             </form>
           </div>
         </div>
-      </div>  
-       
+      </div>
 </body>
 
 </html>
